fix(git-yq): entry point bug

--- a/git-yq/Dockerfile
+++ b/git-yq/Dockerfile
@@ -2,4 +2,4 @@ FROM alpine/git
 RUN apk add yq
 COPY entry.sh /entry.sh
 RUN chmod +x /entry.sh
-CMD ENTRYPOINT ["/entry.sh"]
+ENTRYPOINT ["/entry.sh"]
